Remove formating from simplewidget

--- a/simplewidget.ui
+++ b/simplewidget.ui
@@ -55,15 +55,15 @@
      </property>
      <property name="font">
       <font>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
       <string>Content</string>
      </property>
      <property name="textFormat">
-      <enum>Qt::PlainText</enum>
+      <enum>Qt::AutoText</enum>
      </property>
     </widget>
    </item>
